style fix aside height on tablet view;

--- a/chamados-app/src/components/Aside/index.css
+++ b/chamados-app/src/components/Aside/index.css
@@ -103,6 +103,7 @@
         position: relative;
 
         height: 2rem;
+        min-height: 1rem;
         width: 100%;
         max-width: 100%;
     }
